@@ -2,7 +2,7 @@
  *  @brief #include <uuid/uuid.h>, with alternative implementation for windows.
  */
 /* Copyright (C) 2008 Lemur Consulting Ltd
- * Copyright (C) 2009 Olly Betts
+ * Copyright (C) 2009,2010 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -24,7 +24,7 @@
 
 #ifdef __WIN32__
 # include "common/win32_uuid.h"
-#else
+#elif defined HAVE_UUID_UUID_H
 # include <uuid/uuid.h>
 
 // Some UUID libraries lack const qualifiers.  Solaris is a particular
@@ -49,6 +49,79 @@ inline void uuid_unparse_lower(uuid_t uu, char *out) {
     for (size_t i = 0; i < 36; ++i) out[i] |= 0x20;
 }
 # endif
+
+#else
+
+// FreeBSD/NetBSD UUID API.
+# include <uuid.h>
+# include <cstring>
+# include <exception>
+
+typedef unsigned char uuid_t_[16];
+
+inline void
+uuid_generate(uuid_t_ out) {
+    uuid_t uuid;
+    uint32_t status;
+    uuid_create(&uuid, &status);
+    if (status != uuid_s_ok) {
+	// Can only be uuid_s_no_memory it seems.
+	throw std::bad_alloc();
+    }
+    std::memcpy(&out, &uuid, sizeof(uuid_t_));
+}
+
+inline int
+uuid_parse(const char * in, uuid_t_ uu)
+{
+    uuid_t uuid;
+    uint32_t status;
+    uuid_from_string(in, &uuid, &status);
+    if (status != uuid_s_ok)
+	return -1;
+    std::memcpy(uu, &uuid, sizeof(uuid_t_));
+    return 0;
+}
+
+inline void
+uuid_unparse_lower(const uuid_t_ uu, char * out)
+{
+    uuid_t uuid;
+    uint32_t status;
+    std::memcpy(&uuid, uu, sizeof(uuid_t));
+    char * result;
+    uuid_to_string(&uuid, &result, &status);
+    std::memcpy(out, result, 36);
+    free(result);
+    if (status != uuid_s_ok) {
+	// Could be uuid_s_bad_version (FIXME) or uuid_s_no_memory it seems.
+	throw std::bad_alloc();
+    }
+    /* Characters in out are either 0-9, a-z, '-', or A-Z.  A-Z is mapped to
+     * a-z by bitwise or with 0x20, and the others already have this bit set.
+     */
+    for (size_t i = 0; i < 36; ++i) out[i] |= 0x20;
+}
+
+inline void
+uuid_clear(uuid_t_ uu)
+{
+    std::memset(uu, 0, sizeof(uuid_t_));
+}
+
+inline int
+uuid_is_null(const uuid_t_ uu)
+{
+    size_t i = 0;
+    while (i < sizeof(uuid_t_)) {
+	if (uu[i++])
+	    return 0;
+    }
+    return 1;
+}
+
+// Hide incompatible uuid_t from <uuid.h>.
+# define uuid_t uuid_t_
 
 #endif
 
